--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<span>Love</span>
 				</h2>
 				<h2 class="content__title no-select">
-					<span class="content__title-sub">Chúc  8/3 xinh đẹp như các mỹ nhân trên mạng :></span>
+					<span class="content__title-sub">Chúc bạn 8/3 xinh đẹp như các mỹ nhân trên mạng :></span>
 				</h2>
 			</div>
 		</main>
